# flort

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  Makefile.docs  Pipfile  README.md  TODO.md  mkdocs.yml  pyproject.toml  setup.py  test.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  test.yml
Video/: Clipped_image_20241231_105806.xcf  files.txt  mash.sh  script.txt  seg_8.webm
ai_state/: common-tasks.md  style.md  ways-of-working.md
docs/: README.md  contributing.md  examples.md  filtering.md  index.md  installation.md  output-formats.md  quickstart.md  requirements.txt  troubleshooting.md  ui-guide.md  usage.md
docs/api/: overview.md
docs/stylesheets/: custom.css
flort/: __init__.py  __main__.py  assets.py  cli.py  concatenate_files.py  curses_selector.py  python_outline.py  simple_selector.py  traverse.py  utils.py  validation.py  wrapper.py
tests/: setup.sh  test-ui.py  test_cli.py.old  test_flort.py
tests/test_no_ignore/: file4.py
